dev.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: catalogue-dsi
  namespace: elhadjiba-stage
  labels:
    app: catalogue-dsi
    app.kubernetes.io/component: catalogue-dsi
    app.kubernetes.io/instance: catalogue-dsi
    app.kubernetes.io/name: catalogue-dsi
    app.kubernetes.io/part-of: catalogue-dsi-app
    #app.openshift.io/runtime-namespace: elhadjiba-stage
spec:
  replicas: 3


  selector:
    matchLabels:
      app: catalogue-dsi
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: catalogue-dsi
        deploymentconfig: catalogue-dsi
      #annotations:
        #openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: catalogue-dsi
          image: 'freemanpolys/catalogue-dsi:latest'
          
          #image: >-
           # image-registry.openshift-image-registry.svc:5000/elhadjiba-stage/catalogue-dsi@sha256:724269a80c07553f9c126c77c99d824e6272016d7a861456113eed8f45bf9cfe
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
