service.yml
kind: Service
apiVersion: v1
metadata:
  name: catalogue-dsi
  namespace: elhadjiba-stage
  
  labels:
    app: catalogue-dsi
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    #- name: 8443-tcp
     # protocol: TCP
      #port: 8443
      #targetPort: 8443
  selector:
    app: catalogue-dsi
    #deploymentconfig: catalogue-dsi
